--- a/algorithm/algorithm/src/controller/BusinessInformation/BusinessInformationView.xib
+++ b/algorithm/algorithm/src/controller/BusinessInformation/BusinessInformationView.xib
@@ -10,11 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BusinessInformationView" customModule="algorithm" customModuleProvider="target">
             <connections>
-                <outlet property="businessLabel" destination="ZWS-yN-a6K" id="lBe-tJ-WO2"/>
                 <outlet property="mainImageView" destination="WiX-Va-wk7" id="Sax-WH-ALr"/>
                 <outlet property="mainScrollView" destination="teY-S0-OUB" id="8WH-lQ-g1o"/>
                 <outlet property="pagingScrollView" destination="d7e-0p-FK0" id="6CQ-gg-OQU"/>
-                <outlet property="stackView" destination="lHm-R2-ZVY" id="yn0-B2-Ur7"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,37 +27,13 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainViewImage" translatesAutoresizingMaskIntoConstraints="NO" id="WiX-Va-wk7" userLabel="Main Image View">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="276"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" secondItem="WiX-Va-wk7" secondAttribute="height" multiplier="3:2" id="gke-Fh-shb"/>
+                                        <constraint firstAttribute="width" secondItem="WiX-Va-wk7" secondAttribute="height" multiplier="2:1" id="gke-Fh-shb"/>
                                     </constraints>
                                 </imageView>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZWS-yN-a6K">
-                                    <rect key="frame" x="0.0" y="286" width="414" height="50"/>
-                                    <color key="backgroundColor" red="0.13687233670000001" green="0.66174254440000002" blue="0.544390975" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="50" id="VzJ-gu-tpu"/>
-                                    </constraints>
-                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                </textView>
-                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d7e-0p-FK0" userLabel="Paging View">
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d7e-0p-FK0" userLabel="Paging View">
                                     <rect key="frame" x="0.0" y="346" width="414" height="472"/>
-                                    <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lHm-R2-ZVY">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="472"/>
-                                        </stackView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="UCC-HD-WR6" firstAttribute="trailing" secondItem="lHm-R2-ZVY" secondAttribute="trailing" id="1qW-uG-JjL"/>
-                                        <constraint firstItem="lHm-R2-ZVY" firstAttribute="leading" secondItem="UCC-HD-WR6" secondAttribute="leading" id="Err-OS-qdO"/>
-                                        <constraint firstItem="lHm-R2-ZVY" firstAttribute="height" secondItem="tp6-yZ-tDG" secondAttribute="height" id="Nmg-VZ-j2n"/>
-                                        <constraint firstItem="lHm-R2-ZVY" firstAttribute="top" secondItem="UCC-HD-WR6" secondAttribute="top" id="U6q-f1-UAy"/>
-                                        <constraint firstItem="lHm-R2-ZVY" firstAttribute="width" secondItem="tp6-yZ-tDG" secondAttribute="width" id="tq0-C3-D9r"/>
-                                        <constraint firstItem="UCC-HD-WR6" firstAttribute="bottom" secondItem="lHm-R2-ZVY" secondAttribute="bottom" id="xcf-nq-8c3"/>
-                                    </constraints>
                                     <viewLayoutGuide key="contentLayoutGuide" id="tp6-yZ-tDG"/>
                                     <viewLayoutGuide key="frameLayoutGuide" id="UCC-HD-WR6"/>
                                 </scrollView>
@@ -67,15 +41,12 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstItem="WiX-Va-wk7" firstAttribute="leading" secondItem="KRM-K9-mV9" secondAttribute="leading" id="8Vz-29-f1M"/>
-                                <constraint firstAttribute="trailing" secondItem="ZWS-yN-a6K" secondAttribute="trailing" id="B6q-SD-VNP"/>
-                                <constraint firstItem="d7e-0p-FK0" firstAttribute="top" secondItem="ZWS-yN-a6K" secondAttribute="bottom" constant="10" id="De3-ff-Id1"/>
                                 <constraint firstAttribute="trailing" secondItem="WiX-Va-wk7" secondAttribute="trailing" id="JXx-WZ-1JR"/>
-                                <constraint firstItem="ZWS-yN-a6K" firstAttribute="leading" secondItem="KRM-K9-mV9" secondAttribute="leading" id="XkB-g0-4Dj"/>
                                 <constraint firstAttribute="bottom" secondItem="d7e-0p-FK0" secondAttribute="bottom" id="aAS-tT-gKZ"/>
                                 <constraint firstItem="d7e-0p-FK0" firstAttribute="leading" secondItem="KRM-K9-mV9" secondAttribute="leading" id="dU1-jU-b2U"/>
                                 <constraint firstItem="WiX-Va-wk7" firstAttribute="top" secondItem="KRM-K9-mV9" secondAttribute="top" id="gco-cp-wkf"/>
                                 <constraint firstAttribute="trailing" secondItem="d7e-0p-FK0" secondAttribute="trailing" id="iuL-Cu-yqF"/>
-                                <constraint firstItem="ZWS-yN-a6K" firstAttribute="top" secondItem="WiX-Va-wk7" secondAttribute="bottom" constant="10" id="tcn-Eg-2C0"/>
+                                <constraint firstItem="d7e-0p-FK0" firstAttribute="top" secondItem="WiX-Va-wk7" secondAttribute="bottom" id="tpd-1D-Vyd"/>
                             </constraints>
                         </view>
                     </subviews>
