--- a/algorithm/algorithm/src/controller/Business/Paging/InfoContents.xib
+++ b/algorithm/algorithm/src/controller/Business/Paging/InfoContents.xib
@@ -21,14 +21,14 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uoH-JP-stw">
-                    <rect key="frame" x="60" y="10" width="294" height="147"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Software" translatesAutoresizingMaskIntoConstraints="NO" id="uoH-JP-stw">
+                    <rect key="frame" x="60" y="10" width="294" height="220.5"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="uoH-JP-stw" secondAttribute="height" multiplier="2:1" id="pvi-mf-GF4"/>
+                        <constraint firstAttribute="width" secondItem="uoH-JP-stw" secondAttribute="height" multiplier="4:3" id="pvi-mf-GF4"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zt4-fd-2Wg" userLabel="Business Name Label">
-                    <rect key="frame" x="60" y="162" width="294" height="20"/>
+                    <rect key="frame" x="60" y="235.5" width="294" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="dKP-Vn-fzS"/>
                     </constraints>
@@ -37,14 +37,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rI6-6H-Br2">
-                    <rect key="frame" x="20" y="187" width="374" height="2"/>
+                    <rect key="frame" x="20" y="260.5" width="374" height="2"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="2" id="360-F6-wWw"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAA-bN-9RW" userLabel="Content Label">
-                    <rect key="frame" x="60" y="194" width="294" height="662"/>
+                    <rect key="frame" x="60" y="267.5" width="294" height="588.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -58,6 +58,9 @@
                     <state key="normal" title="詳しく見る">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="moreButton:" destination="-1" eventType="touchUpInside" id="l5e-Bz-U63"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -85,6 +88,7 @@
         </view>
     </objects>
     <resources>
+        <image name="Software" width="372" height="249"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
